2005-08-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.extractmodel.ave: 
	* doc/en/dcwaterdesign.xml: Added function to extract models based on
	the bytecode
	* dcwatdes.project.splitmodel.ave: Stop with error message if empty
	string or NULL is encountered in zone field.
	* build.xml: Version number is now transferred to manual and nsis file
	* installer/dc_water_design_extension.nsi: Fixed several problems with
	Start Menu shortcuts
	* dcwatdesextension.make.ave: Version number is 2.12 now

2005-08-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.i18n.createdictionaries.xml: Documentation and 
	internationalization for model merge
	* dcwatdes.project.splitmodel.ave: Finished model splitting code
	* dcwatdes.project.mergemodel.ave: Basic model merging code; not
	very fault tolerant yet. Implements RFE #1233961
	
2005-07-14  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.splitmodel.ave:
	* dcwatdes.system.makedir.ave:
	* dcwatdes.i18n.createdictionaries.ave: Started with implementation of
	functionality to split the models (RFE #1233961)
	
2005-07-11  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.bitcode.or.ave:
	* dcwatdes.bitcode.xor.ave:
	* dcwatdes.bitcode.and.ave:
	* dcwatdes.bitcode.issetasnumber.ave:
	* dcwatdes.table.calculatebitcodeupdate.ave:
	* dcwatdes.table.calculatebitcode.ave: Bitcodes are strings now
	and work up to 255 zones (RFE #1233959)
	
2005-07-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsfortimestep.ave: Don't try to link
	results to tables with 0 records

2005-07-06  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/docbook.css: Improved layout of Author names and their email
	addresses.

2005-07-05  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.popup.pipes.selectconnectedpipes.ave:
	* doc/en/dcwaterdesign.xml: